# agent-eval

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: eval.yml
dashboard/: app.py
evalsets/: tool_calling.yaml
evalsets/schema/: eval_suite.schema.json
reports/: sample_report.html
results/: sample_run.json
scripts/: export_schema.py  generate_sample.py
src/agent_eval/: __init__.py  cli.py
src/agent_eval/agent/: __init__.py  tool_agent.py
src/agent_eval/eval/: __init__.py  assertions.py  case.py  judge.py  runner.py  stats.py
src/agent_eval/providers/: __init__.py  anthropic.py  base.py  mock.py
src/agent_eval/report/: __init__.py  html.py  models.py  svg.py
src/agent_eval/tools/: __init__.py  registry.py
tests/: test_anthropic_provider.py  test_assertions.py  test_cli.py  test_html_report.py  test_judge.py  test_mock_provider.py  test_provider_base.py  test_runner.py  test_stats.py  test_svg.py
