[tool.poetry]
name = "agent-eval"
version = "0.1.0"
description = "QA discipline for non-deterministic AI: measure how reliably an LLM agent calls the right tool, with flake rates and confidence intervals."
authors = ["Manish G Kishore <manishtwin30@gmail.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/manishgk/agent-eval"
packages = [{ include = "agent_eval", from = "src" }]

[tool.poetry.dependencies]
python = "^3.11"
anthropic = "^0.40"
pydantic = "^2.7"
pyyaml = "^6.0"
scipy = "^1.13"
tenacity = "^9.0"
rich = "^13.7"
jinja2 = "^3.1"
python-dotenv = "^1.0"

[tool.poetry.group.dashboard.dependencies]
streamlit = "^1.36"
plotly = "^5.22"
pandas = "^2.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
pytest-asyncio = "^0.23"
ruff = "^0.5"
mypy = "^1.10"
types-PyYAML = "^6.0"

[tool.poetry.scripts]
agent-eval = "agent_eval.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.11"
packages = ["agent_eval"]
mypy_path = "src"
strict = true
ignore_missing_imports = true
